@@ -7,6 +7,16 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- First stab at wrapping some Tiger frameworks:
+
+  - ``AppleScriptKit``
+  - ``AppKitScripting``
+  - ``Automator``
+  - ``CoreData``
+  - ``XgridFoundation``
+
+  Documentation and tests not yet written.
+
 - More conveniences for ``list``-like and ``dict``-like
   objects: ``__reversed__``, ``reverse``, ``pop``,
   ``remove``, ``fromkeys``.
